--- a/style.css
+++ b/style.css
@@ -7,19 +7,22 @@
 
 body {
 	font-family: verdana;
-	background-color: #E6E;
+	background-color: #E6E6E6
 }
 
 header {
 	width: 960px;
 	height: 75px;
+	margin: 5px auto;
 	background-color: #FFF;
+	border: 1px solid #FF00FF;
 	border-radius: 5px;
 }
 
 section {
 	width: 960px;
 	height: 300;
+	margin: 5px auto;
 	background-color: #FFF;	
 	border-radius: 5px;
 }
@@ -27,6 +30,7 @@ section {
 footer {
 	width: 960px;
 	height: 75px;
+	margin: 5px auto;
 	background-color: #FFF;
 	border-radius: 5px;
 }
