--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 header {
 	width: 960px;
 	height: 75px;
-	margin: 5px auto;
+	margin: 25px auto;
+	padding: 25px;
 	background-color: #FFF;
 	border: 1px solid #FFFF00;
 	border-radius: 5px;
@@ -21,8 +22,9 @@ header {
 
 section {
 	width: 960px;
-	height: 300;
-	margin: 5px auto;
+	height: 300px;
+	margin: 25px auto;
+	padding: 25px;
 	background-color: #FFF;	
 	border: 1px solid #FFFF00;
 	border-radius: 5px;
@@ -31,7 +33,8 @@ section {
 footer {
 	width: 960px;
 	height: 75px;
-	margin: 5px auto;
+	margin: 25px auto;
+	padding: 25px;
 	background-color: #FFF;
 	border: 1px solid #FFFF00;
 	border-radius: 5px;
